# agent_hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTH_ENV_SMOKE.md  Dockerfile  README.md  SYSTEM_PROMPT.md  codex.config.toml  docker-compose.yml  docker-entrypoint.sh  generate_plot.py  pyproject.toml  run-codex.sh  run_codex.sh
.codex/: README.md  config.toml
.codex/agents/: adversarial_reviewer.md  architecture.md  explorer.toml  fresh_auditor.md  implementation.md  naive-implementer.toml  orchestrator.md  spec-owner.toml  spec-reviewer.toml  verification.md  worker.toml
.codex/templates/: pr_body.md  task_contract.md  validation_report.md
config/: agent.config.toml
docker/: Dockerfile  docker-entrypoint.py
docker/agent_cli/: Dockerfile  Dockerfile.base  README.md  docker-entrypoint.py
docker/agent_hub/: Dockerfile  README.md  run-agent-hub.sh
docs/: agent-gotchas.md  mcp-tools-implementation-spec.md  mobile_capacitor.md
tests/: test_agent_cli_dockerfile.py  test_agent_core_config.py  test_agent_core_errors.py  test_agent_core_identity.py  test_agent_core_shared.py  test_auth_service.py  test_build_inputs.py  test_command_runner.py  test_domain_services.py  test_hub_and_cli.py  test_hub_ui_widgets.py  test_launch_and_bridge_refactor.py  test_preflight_integration_env.py  test_runtime_images.py  test_settings_service.py  test_state_store.py  test_structured_logging_contract.py  test_web_chat_layout_engines.py  test_web_flexlayout_state.py  test_web_pending_state.py
web/: capacitor.config.json  index.html  package.json  vite.config.js
(+172 files in other folders)
